syntax = "proto3";
package com.dspractice.bookstore.commonproto;


message CreditCardInformation {
  string number = 1;
  string expirationDate = 2;
  string cvv = 3;
}

message BillingAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  string country = 5;
}

message FraudDetectionRequest {
    CreditCardInformation card = 1;
    BillingAddress address = 2;
}

message FraudDetectionResponse {
  bool fraud = 1;
}

service FraudDetectionService {
  rpc detect (FraudDetectionRequest) returns (FraudDetectionResponse);
}


