syntax = "proto3";
package com.dspractice.bookstore.commonproto;
option java_multiple_files = true;

message CreditCard {
  string number = 1;
  string expiration_date = 2;
  string cvv = 3;
}

message ContactAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  string country = 5;
}

message TransactionCreditCardRequest {
  string orderId = 1;
  CreditCard card = 2;
}

message TransactionCreditCardResponse {
  string orderId = 1;
  string verificationStatus = 2;
}

message Item {
  string name = 1;
  int32 quantity = 2;
}

message TransactionBooksRequest {
  string orderId = 1;
  repeated Item books = 2;
}

message TransactionBooksResponse {
  string orderId = 1;
}

message TransactionContactRequest {
  string orderId = 1;
  string name = 2;
  string contact = 3;
  ContactAddress contactAddress = 4;
}

message TransactionContactResponse {
  string orderId = 1;
}

service TransactionVerificationService {
  rpc verifyBooks (TransactionBooksRequest) returns (TransactionBooksResponse);
  rpc verifyCreditCard (TransactionCreditCardRequest) returns (TransactionCreditCardResponse);
  rpc verifyContact (TransactionContactRequest) returns (TransactionContactResponse);
}

